--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && serve"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/miyu210429/TypeScript_kanban_system#readme",
   "devDependencies": {
+    "serve": "^14.2.1",
     "typescript": "^5.2.2"
   }
 }
